Update index.html add h1 and p

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>prueba</title>
     </head>
     <body>
-        cuerpo del index
+        <h1>Titulo del index</h1>
+        <p>cuerpo del index</p>
+        
     </body>
 </html>
